--- a/demos/otherlink.html
+++ b/demos/otherlink.html
@@ -212,6 +212,7 @@
 <script type="text/javascript" src="js/jquery/jquery.min.js?v=2.0"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap.min.js?v=2.0"></script>
 <script type="text/javascript" src="./lib/qunee-min.js?v=2.0"></script>
+<script type="text/javascript" src="./lib/moment.min.js"></script>
 <script type="text/javascript" src="js/common.js?v=2.0"></script>
 <script type="text/javascript" src="js/graphs.js?v=2.0"></script>
 <script type="text/javascript" src="basic/otherlink.js"></script>
