--- a/demos/otherlink.html
+++ b/demos/otherlink.html
@@ -11,10 +11,18 @@
 </head>
 <body>
     
-<div style="padding-left: calc(50% - 300px);margin-top: 50px;">
-    <div class="search-item input-group">
-        <span class="input-group-addon" id="basic-addon1" style="width: 80px;">编码：</span>
-        <input id="inputSCBM" type="text" class="form-control" style="width: 300px;" placeholder="请输入编码" aria-describedby="basic-addon1">
+<div style="padding-left: calc(50% - 550px);margin-top: 50px;">
+    <div class="search-item input-group" style="margin-right: 20px;">
+        <span class="input-group-addon" id="basic-addon1" style="width: 60px;">标题：</span>
+        <input id="search_BT" type="text" class="form-control" style="width: 200px;" placeholder="请输入标题" aria-describedby="basic-addon1">
+    </div>
+    <div class="search-item input-group" style="margin-right: 20px;">
+        <span class="input-group-addon" id="basic-addon1" style="width: 80px;">统计码：</span>
+        <input id="search_TJM" type="text" class="form-control" style="width: 200px;" placeholder="请输入统计码" aria-describedby="basic-addon1">
+    </div>
+    <div class="search-item input-group" style="margin-right: 20px;">
+        <span class="input-group-addon" id="basic-addon1" style="width: 80px;">发文编号：</span>
+        <input id="search_FWBH" type="text" class="form-control" style="width: 200px;" placeholder="请输入发文编号" aria-describedby="basic-addon1">
     </div>
     <button type="button" style="margin-left: 8px;width: 80px;" id="searchBtn" class="btn btn-default">搜索</button>
 </div>
@@ -27,9 +35,9 @@
 </button>
 
 <!-- 按钮触发模态框 -->
-<button class="btn btn-primary" data-toggle="modal" data-target="#getQBUUID" style="float: right;margin-right: 100px;margin-bottom: 40px;">申请QB唯一码</button>
 <button class="btn btn-primary" data-toggle="modal" data-target="#addPro" style="float: right;margin-right: 30px;margin-bottom: 40px;">添加半成品</button>
-<button class="btn btn-primary" data-toggle="modal" data-target="#addSucai" style="float: right;margin-right: 30px;margin-bottom: 40px;">添加素材</button>
+<button class="btn btn-primary" data-toggle="modal" data-target="#addSucai" style="float: right;margin-right: 30px;margin-bottom: 40px;">添加本级素材</button>
+<button class="btn btn-primary" data-toggle="modal" data-target="#addUploadSucai" style="float: right;margin-right: 30px;margin-bottom: 40px;">添加上传素材</button>
 <!-- 模态框（Modal） -->
 <div class="modal fade" id="addPro" tabindex="-1" role="dialog" aria-labelledby="addProLabel" aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog">
@@ -40,31 +48,23 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label>动向QB唯一码：</label>
-                    <input type="text" name="DXQBWYM" id="DXQBWYM" class="form-control" placeholder="输入动向QB唯一码">
-                </div>
-                <div class="form-group">
-                    <label>动向QB内码：</label>
-                    <input type="text" name="DXQBNM" id="DXQBNM" class="form-control" placeholder="输入动向QB内码">
+                    <label>QB内码：</label>
+                    <input type="text" name="DXQBNM" id="DXQBNM" class="form-control" placeholder="输入QB内码">
                 </div>
                 <div class="form-group">
                     <label>用户编号：</label>
                     <input type="text" name="YHBH" id="YHBH" class="form-control" placeholder="输入用户编号">
                 </div>
                 <div class="form-group">
-                    <label>副本原件：</label>
-                    <select class="form-control" id="FBDX">
-                        <option value="" selected>空</option>
-                        <option value="0">原件</option>
-                        <option value="1">副本</option>
-                    </select>
+                    <label>副本动向：</label>
+                    <input type="text" name="FBDX" id="FBDX" class="form-control" placeholder="输入副本动向">
                 </div>
                 <div class="form-group">
                     <label>是否有副本：</label>
                     <select class="form-control" id="SFYFB">
                         <option value="" selected>空</option>
-                        <option value="0">有</option>
-                        <option value="1">无</option>
+                        <option value="1">有</option>
+                        <option value="0">无</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -83,6 +83,14 @@
                     <label>席位：</label>
                     <input type="text" name="XW" id="XW" class="form-control" placeholder="输入席位">
                 </div>
+                <div class="form-group">
+                    <label>素材编码：</label>
+                    <input type="text" name="SCBM" id="SCBM" class="form-control" placeholder="输入素材编码">
+                </div>
+                <div class="form-group">
+                    <label>日志哈希：</label>
+                    <input type="text" name="LOGHASH" id="LOGHASH" class="form-control" placeholder="输入日志哈希">
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="addProSubmit">添加</button>
@@ -98,44 +106,52 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="addSucaiLabel">添加素材</h4>
+                <h4 class="modal-title" id="addSucaiLabel">添加本级素材</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label>半成品QB唯一码：</label>
-                    <input type="text" name="SUCAIDXQBWYM" id="SUCAIDXQBWYM" class="form-control" placeholder="输入半成品QB唯一码">
+                    <label>QB内码：</label>
+                    <input type="text" name="DXQBNM" id="DXQBNM" class="form-control" placeholder="输入QB内码">
                 </div>
                 <div class="form-group">
-                    <label>半成品QB内码：</label>
-                    <input type="text" name="SUCAIBCPTMDXQBNM" id="SUCAIBCPTMDXQBNM" class="form-control" placeholder="输入半成品QB内码">
-                </div>
-                <div class="form-group">
-                    <label>素材QB唯一码：</label>
-                    <input type="text" name="SUCAISCTMDXQBWYM" id="SUCAISCTMDXQBWYM" class="form-control" placeholder="输入素材QB唯一码">
-                </div>
-                <div class="form-group">
-                    <label>素材QB内码：</label>
-                    <input type="text" name="SUCAISCTMDXQBNM" id="SUCAISCTMDXQBNM" class="form-control" placeholder="输入素材QB内码">
-                </div>
-                <div class="form-group">
-                    <label>情报类型：</label>
-                    <input type="text" name="SUCAIQBLX" id="SUCAIQBLX" class="form-control" placeholder="输入情报类型">
-                </div>
-                <div class="form-group">
-                    <label>数据标题：</label>
-                    <input type="text" name="SUCAIBT" id="SUCAIBT" class="form-control" placeholder="输入数据标题">
+                    <label>标题：</label>
+                    <input type="text" name="SucaiBT" id="SucaiBT" class="form-control" placeholder="输入标题">
                 </div>
                 <div class="form-group">
                     <label>上报单位：</label>
-                    <input type="text" name="SUCAISBDW" id="SUCAISBDW" class="form-control" placeholder="输入上报单位">
+                    <input type="text" name="SucaiSBDW" id="SucaiSBDW" class="form-control" placeholder="输入上报单位">
                 </div>
                 <div class="form-group">
-                    <label>报文形式：</label>
-                    <input type="text" name="SUCAIBWXS" id="SUCAIBWXS" class="form-control" placeholder="输入报文形式">
+                    <label>整编单位：</label>
+                    <input type="text" name="SucaiZBDW" id="SucaiZBDW" class="form-control" placeholder="输入整编单位">
+                </div>
+                <div class="form-group">
+                    <label>评优：</label>
+                    <input type="text" name="SucaiPY" id="SucaiPY" class="form-control" placeholder="输入评优">
                 </div>
                 <div class="form-group">
                     <label>发文编号：</label>
-                    <input type="text" name="SUCAIFWBH" id="SUCAIFWBH" class="form-control" placeholder="输入发文编号">
+                    <input type="text" name="SucaiFWBH" id="SucaiFWBH" class="form-control" placeholder="输入发文编号">
+                </div>
+                <div class="form-group">
+                    <label>报文形式：</label>
+                    <input type="text" name="SucaiBWXS" id="SucaiBWXS" class="form-control" placeholder="输入报文形式">
+                </div>
+                <div class="form-group">
+                    <label>素材编码：</label>
+                    <input type="text" name="SucaiSCBM" id="SucaiSCBM" class="form-control" placeholder="输入素材编码">
+                </div>
+                <div class="form-group">
+                    <label>统计码：</label>
+                    <input type="text" name="SucaiTJM" id="SucaiTJM" class="form-control" placeholder="输入统计码">
+                </div>
+                <div class="form-group">
+                    <label>引用素材单位：</label>
+                    <input type="text" name="SucaiYYSCDW" id="SucaiYYSCDW" class="form-control" placeholder="输入引用素材单位">
+                </div>
+                <div class="form-group">
+                    <label>日志哈希：</label>
+                    <input type="text" name="SucaiLOGHASH" id="SucaiLOGHASH" class="form-control" placeholder="输入日志哈希">
                 </div>
             </div>
             <div class="modal-footer">
@@ -147,31 +163,66 @@
 </div>
 
 <!-- 模态框（Modal） -->
-<div class="modal fade" id="getQBUUID" tabindex="-1" role="dialog" aria-labelledby="getQBUUIDLabel" aria-hidden="true" data-backdrop="static">
+<div class="modal fade" id="addUploadSucai" tabindex="-1" role="dialog" aria-labelledby="addUploadSucaiLabel" aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="">获取QB唯一码</h4>
+                <h4 class="modal-title" id="addUploadSucaiLabel">添加上报素材</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label>QB类型：</label>
-                    <input type="text" name="QBLX" id="QBLX" value="1" disabled class="form-control" placeholder="输入QB类型">
+                    <label>素材QB内码：</label>
+                    <input type="text" name="UploadSCTMDXQBNM" id="UploadSCTMDXQBNM" class="form-control" placeholder="输入素材QB内码">
                 </div>
                 <div class="form-group">
-                    <label>QB内码：</label>
-                    <input type="text" name="QBNM" id="QBNM" class="form-control" placeholder="输入QB内码">
+                    <label>标题：</label>
+                    <input type="text" name="UploadBT" id="UploadBT" class="form-control" placeholder="输入标题">
+                </div>
+                <div class="form-group">
+                    <label>上报单位：</label>
+                    <input type="text" name="UploadSBDW" id="UploadSBDW" class="form-control" placeholder="输入上报单位">
+                </div>
+                <div class="form-group">
+                    <label>整编单位：</label>
+                    <input type="text" name="UploadZBDW" id="UploadZBDW" class="form-control" placeholder="输入整编单位">
+                </div>
+                <div class="form-group">
+                    <label>评优：</label>
+                    <input type="text" name="UploadPY" id="UploadPY" class="form-control" placeholder="输入评优">
+                </div>
+                <div class="form-group">
+                    <label>发文编号：</label>
+                    <input type="text" name="UploadFWBH" id="UploadFWBH" class="form-control" placeholder="输入发文编号">
+                </div>
+                <div class="form-group">
+                    <label>报文形式：</label>
+                    <input type="text" name="UploadBWXS" id="UploadBWXS" class="form-control" placeholder="输入报文形式">
+                </div>
+                <div class="form-group">
+                    <label>素材编码：</label>
+                    <input type="text" name="UploadSCBM" id="UploadSCBM" class="form-control" placeholder="输入素材编码">
+                </div>
+                <div class="form-group">
+                    <label>统计码：</label>
+                    <input type="text" name="UploadTJM" id="UploadTJM" class="form-control" placeholder="输入统计码">
+                </div>
+                <div class="form-group">
+                    <label>引用素材单位：</label>
+                    <input type="text" name="UploadYYSCDW" id="UploadYYSCDW" class="form-control" placeholder="输入引用素材单位">
+                </div>
+                <div class="form-group">
+                    <label>日志哈希：</label>
+                    <input type="text" name="UploadLOGHASH" id="UploadLOGHASH" class="form-control" placeholder="输入日志哈希">
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="getQBUUIDSubmit">确定</button>
+                <button type="button" class="btn btn-primary" id="addUploadSucaiSubmit">添加</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
 </div>
-
 <div id="page">
     <div id="right_panel">
         <div id="graph_panel" class="q-panel">
@@ -188,21 +239,6 @@
             </div>
         </div>
     </div>
-</div>
-
-<div class="modal fade" id="showResult" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">QB唯一码</h4>
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
 </div>
 	
 <div class="alert alert-success hide" role="alert" id="success-msg">正确</div>
