--- a/demos/otherlink.html
+++ b/demos/otherlink.html
@@ -111,7 +111,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label>QB内码：</label>
-                    <input type="text" name="DXQBNM" id="DXQBNM" class="form-control" placeholder="输入QB内码">
+                    <input type="text" name="SucaiDXQBNM" id="SucaiDXQBNM" class="form-control" placeholder="输入QB内码">
                 </div>
                 <div class="form-group">
                     <label>标题：</label>
