--- a/demos/oldotherlink.html
+++ b/demos/oldotherlink.html
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="q-content">
-                <div id="canvas" style="width: 100%;height:800px;"></div>
+                <div id="canvas"></div>
                 <div class="mask" id="mask_panel">
                     <div class="loading">Loading...</div>
                 </div>
@@ -245,10 +245,12 @@
 
 <div class="alert alert-danger hide" role="alert" id="error-msg">数据出错</div>
 
-<script type="text/javascript" src="js/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="lib/echarts.min.js"></script>
+<script type="text/javascript" src="js/jquery/jquery.min.js?v=2.0"></script>
+<script type="text/javascript" src="js/bootstrap/bootstrap.min.js?v=2.0"></script>
+<script type="text/javascript" src="./lib/qunee-min.js?v=2.0"></script>
 <script type="text/javascript" src="./lib/moment.min.js"></script>
-<script type="text/javascript" src="basic/newotherlink.js"></script>
+<script type="text/javascript" src="js/common.js?v=2.0"></script>
+<script type="text/javascript" src="js/graphs.js?v=2.0"></script>
+<script type="text/javascript" src="basic/otherlink.js"></script>
 </body>
 </html> 
