--- a/demos/oldindex.html
+++ b/demos/oldindex.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="q-content">
-                <div id="canvas" style="width: 100%;height:800px;"></div>
+                <div id="canvas"></div>
                 <div class="mask" id="mask_panel">
                     <div class="loading">Loading...</div>
                 </div>
@@ -136,10 +136,13 @@
 
 <div class="alert alert-danger hide" role="alert" id="error-msg">数据出错</div>
 
-<script type="text/javascript" src="js/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
-<script type="text/javascript" src="lib/echarts.min.js"></script>
+<script type="text/javascript" src="js/jquery/jquery.min.js?v=2.0"></script>
+<script type="text/javascript" src="js/bootstrap/bootstrap.min.js?v=2.0"></script>
+<script type="text/javascript" src="./lib/qunee-min.js?v=2.0"></script>
 <script type="text/javascript" src="./lib/moment.min.js"></script>
-<script type="text/javascript" src="basic/newhello.js"></script>
+<script type="text/javascript" src="js/common.js?v=2.0"></script>
+<script type="text/javascript" src="js/graphs.js?v=2.0"></script>
+<!--<script type="text/javascript" src="js/demo.js?v=2.0"></script>-->
+<script type="text/javascript" src="basic/hello.js"></script>
 </body>
 </html> 
