--- a/demos/index.html
+++ b/demos/index.html
@@ -45,6 +45,9 @@
 <button class="btn" style="float: left;margin-left: 20px;margin-bottom: 40px;">
     <a href="./otherlink.html">侧链</a>
 </button>
+<button class="btn" style="float: left;margin-left: 20px;margin-bottom: 40px;">
+    <a href="./search.html">查询</a>
+</button>
 
 <!-- 按钮触发模态框 -->
 <button class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="float: right;margin-right: 30px;margin-bottom: 40px;">添加节点</button>
