--- a/demos/search.html
+++ b/demos/search.html
@@ -57,12 +57,12 @@
 			<div class="search-item input-group" style="margin-right: 20px;">
 				<span class="input-group-addon" id="basic-addon1" style="width: 60px;">类型：</span>
 				<select class="form-control" id="search_CZLX">
-					<option value="7" selected=true>7</option>
-					<option value="8">8</option>
+					<option value="7" selected=true>属性</option>
+					<option value="8">时间</option>
 				</select>
 			</div>
 			<div id="search_FINDKEY_c" class="search-item input-group" style="margin-right: 20px;">
-				<span class="input-group-addon" id="basic-addon1" style="width: 60px;">可查询KEY：</span>
+				<span class="input-group-addon" id="basic-addon1" style="width: 60px;">可查询属性：</span>
 				<select class="form-control" id="search_FINDKEY">
 					<option value="bt" selected=true>标题</option>
 					<option value="qblx">QB类型</option>
@@ -71,7 +71,7 @@
 			</div>
 			<div id="search_FINDVALUE_c" class="search-item input-group" style="margin-right: 20px;">
 				<span class="input-group-addon" id="basic-addon1" style="width: 80px;">属性值：</span>
-				<input id="search_FINDVALUE" type="text" class="form-control" style="width: 200px;" placeholder="请输入属性值search_CZLX" aria-describedby="basic-addon1">
+				<input id="search_FINDVALUE" type="text" class="form-control" style="width: 200px;" placeholder="请输入属性值" aria-describedby="basic-addon1">
 			</div>
 			<div id="search_Date_c" class="search-item input-group hide" style="margin-right: 20px;">
 				<span class="input-group-addon" id="basic-addon1" style="width: 80px;">时间区间：</span>
