--- a/demos/index.html
+++ b/demos/index.html
@@ -127,8 +127,8 @@
             </div>
             <div class="q-content">
                 <div class="index_legend">
-                    <div class="index_legend_def">代表产品</div>
-                    <div class="index_legend_abc">代表素材</div>
+                    <div class="index_legend_def">产品</div>
+                    <div class="index_legend_abc">素材</div>
                 </div>
                 <div id="canvas" style="width: 100%;height:800px;"></div>
                 <div class="mask" id="mask_panel">
